--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "ReklamacijskiPultContext": "Data Source=SQL6031.site4now.net;Initial Catalog=db_aa6919_reklamacijskipult;User Id=db_aa6919_reklamacijskipult_admin;Password=Kreso1038"
+  }
 }
