--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,7 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ReklamacijskiPultContext": "Data Source=SQL6030.site4now.net;Initial Catalog=db_aa6919_reklamacijskipult;User Id=db_aa6919_reklamacijskipult_admin;Password=Kreso1038"
+    "ReklamacijskiPultContext": "Data Source=SQL6030.site4now.net;Initial Catalog=db_aa6919_reklamacijskipult;User Id=db_aa6919_reklamacijskipult_admin;Password=Reklamacijskipult01."
+
 
   }
 }
