sve tablice dodane i rade

--- a/Backend/appsettings.Development.json
+++ b/Backend/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "ReklamacijskiPultContext": "Server=KOMP;Database=reklamacijski_pult;Trusted_Connection=True;TrustServerCertificate=True"
+    "ReklamacijskiPultContext": "Data Source=SQL5105.site4now.net;Initial Catalog=db_aa7f6c_pult;User Id=db_aa7f6c_pult_admin;Password=kresimir1038"
+
   }
 }
