--- a/Backend/appsettings.json
+++ b/Backend/appsettings.json
@@ -8,8 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ReklamacijskiPultContext": "Data Source=SQL6030.site4now.net;Initial Catalog=db_aa6919_reklamacijskipult;User Id=db_aa6919_reklamacijskipult_admin;Password=Reklamacijskipult01."
-
+    "ReklamacijskiPultContext": "Data Source=SQL5105.site4now.net;Initial Catalog=db_aa7f6c_pult;User Id=db_aa7f6c_pult_admin;Password=kresimir1038"
 
   }
 }
